recipes/postgres/manifests/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: postgres
spec:
    type: NodePort
    selector:
      app: postgres
    ports:
    - name: postgres
      port: 5432
      nodePort: 30432
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  labels:
    app: pgadmin
spec:
  type: ClusterIP
  selector:
   app: pgadmin
  ports:
   - name: pgadmin
     port: 80
     targetPort: 80
     protocol: TCP
